--- a/app/views/home/_new_answer_form.html.erb
+++ b/app/views/home/_new_answer_form.html.erb
@@ -7,16 +7,17 @@
       </div>
       <div class="modal-body">
         <%= form_for :answer, url: '/answers', html: { class: 'form-horizontal' } do%>
+            <input type="hidden" name="answer[question_id]" value="<%= @question.id  %>">
           <div class="form-group">
             <label for="inputEmails" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-              <input type="email" name="email" class="form-control" id="inputEmails" placeholder="Email" required>
+              <input type="email" name="answer[email]" class="form-control" id="inputEmails" placeholder="Email" required>
             </div>
           </div>
           <div class="form-group">
             <label for="inputAnswer" class="col-sm-2 control-label">Answer</label>
             <div class="col-sm-10">
-              <textarea class="form-control" name="answer_body" id="inputAnswer" placeholder="What's your answer?" required>
+              <textarea class="form-control" name="answer[body]" id="inputAnswer" placeholder="What's your answer?" required>
               </textarea>
             </div>
           </div>
