--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,7 +18,7 @@
       <div><%= time_ago_in_words question.created_at %></div>
       <%= question.body %>
       <div class="">
-        <a href="/questions/12" class="btn btn-success btn-xs">View Answers</a>
+        <a href="<%= question_path(question) %>" class="btn btn-success btn-xs">View Answers</a>
       </div>
     </div>
   </div>
