--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -22,56 +22,21 @@
       </div>
 
       <%= render 'home/new_answer_form' %>
+      <% @answers.each do |answer| %>
     <div class="media">
       <div class="media-left">
         <a href="#">
-        <img src="http://www.gravatar.com/avatar/424242" alt="" class="media-oject"/></a>
+        <img src="<%= answer.gravatar %>" alt="" class="media-oject"/></a>
 
       </div>
       <div class="media-body">
-        <h4 class="media-heading">user@email.com answered:</h4>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-        deserunt mollit anim id est laborum.
+        <h4 class="media-heading"><%= answer.email %> answered:</h4>
+        <div><%= time_ago_in_words answer.created_at %></div>
+          <%= answer.body %>
       </div>
     </div>
 
-    <div class="media">
-      <div class="media-left">
-        <a href="#">
-        <img src="http://www.gravatar.com/avatar/424242" alt="" class="media-oject"/></a>
-
-      </div>
-      <div class="media-body">
-        <h4 class="media-heading">user@email.com answered:</h4>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-        deserunt mollit anim id est laborum.
-      </div>
-    </div>
-
-    <div class="media">
-      <div class="media-left">
-        <a href="#">
-        <img src="http://www.gravatar.com/avatar/424242" alt="" class="media-oject"/></a>
-
-      </div>
-      <div class="media-body">
-        <h4 class="media-heading">user@email.com answered:</h4>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-        deserunt mollit anim id est laborum.
-      </div>
-    </div>
+      <% end %>
     </div>
   </div>
 </div>
