--- a/app/views/home/_new_answer_form.html.erb
+++ b/app/views/home/_new_answer_form.html.erb
@@ -11,7 +11,7 @@
           <div class="form-group">
             <label for="inputEmails" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-              <input type="email" name="answer[email]" class="form-control" id="inputEmails" placeholder="Email" required>
+              <input type="email" name="answer[email]" class="form-control" id="inputEmails" placeholder="Email" value="<%= current_user_email %>" required>
             </div>
           </div>
           <div class="form-group">
