--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,6 +23,9 @@
     </div>
   </div>
   <% end %>
+  <% if @questions.empty? %>
+  <div class="alert alert-info">Nothing here yet. Be the first to ask!</div>
+  <% end %>
 </div>
 
 </div>
