--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -37,6 +37,9 @@
     </div>
 
       <% end %>
+      <% if @answers.empty?  %>
+      <div class="alert alert-info">This question has no answers yet. Be the first to answer it!</div>
+      <% end %>
     </div>
   </div>
 </div>
