--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,35 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.navbar {
+  margin-bottom: 0;
+}
+
+.boxes {
+  .media {
+    border: thin solid #f4f4f4;
+    padding: 1em;
+    border-radius: 10px;
+    background-color: #eee;
+    position: relative;
+
+    .time {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      color: #666;
+    }
+
+    .answer {
+      position: absolute;
+      right: 10px;
+      bottom: 6px;
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ddd;
+    }
+  }
+}
