--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,6 +29,7 @@
   <% if @questions.empty? %>
       <div class="alert alert-info">Nothing here yet. Be the first to ask!</div>
   <% end %>
+  <p> Version is <%= @version %></p>
 </div>
 
 </div>
